--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,4 +1,4 @@
-<section class="page-header">
+<section id="top" class="page-header">
   <h1 class="project-name">{{ site.title }}</h1>
   <h2 class="project-tagline">{{ site.tagline }}</h2>
   <a class="btn" href="#informática">Informática</a>
