--- a/css/main.css
+++ b/css/main.css
@@ -25,3 +25,15 @@ td {
     font-size: 14px;
     font-weight: bold;
 }
+
+a[href="#top"]{
+    padding:10px;
+    position:fixed;
+    top: 90%;
+    right:40px;
+    font-size: 30px;
+}
+
+a[href="#top"]:hover{
+    text-decoration:none;
+}
