--- a/_layouts/professor.html
+++ b/_layouts/professor.html
@@ -3,7 +3,9 @@ layout: default
 ---
 
 <div id="home">
+  {{page.title}}
   {% for curso in site.data.horarios.professores %}
+          {{professor.nome}}
     {% if professor.nome == page.title %}
       <h1>{{ professor.nome }}</h1>
 
