--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -2,11 +2,11 @@
   <h1 class="project-name">{{ site.title }}</h1>
   <h2 class="project-tagline">{{ site.tagline }}</h2>
   
-  <nav class="dropdown">
+  <nav >
     <ul>
       {% for curso in site.data.horarios.cursos %}
       <li>
-        <a class="btn dropbtn">{{curso.nome}}</a>
+        <a class="btn dropbtn dropdown">{{curso.nome}}</a>
         <div class="dropdown-content">
           {% for turma in curso.turmas %}
             <a href="#">{{turma.nome}}</a>
