--- a/css/cayman.css
+++ b/css/cayman.css
@@ -261,6 +261,8 @@ a {
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
+    max-height:400px;
+    overflow-y:auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
