--- a/css/main.css
+++ b/css/main.css
@@ -37,3 +37,59 @@ a[href="#top"]{
 a[href="#top"]:hover{
     text-decoration:none;
 }
+
+.dropbtn {
+    padding: 0.6rem 0.9rem;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+    margin-left: 16px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    max-height:400px;
+    overflow-y:auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+#nav > ul > li {
+  display: inline-block;
+  margin: -9px 0.5em 0 0.5em;
+  border-radius: 0.5em;
+  padding: 0.85em;
+  border: solid 1px transparent;
+  -moz-transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
+  -webkit-transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
+  -ms-transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
+  transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
+}
+
+#nav > ul > li > a {
+  display: block;
+  color: inherit;
+  text-decoration: none;
+  border: 0;
+  outline: 0;
+}
+ul{
+  display: inline-block;
+}
