--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,7 @@ a[href="#top"]:hover{
     display: none;
     position: absolute;
     background-color: #f9f9f9;
+    min-width:200px;
     max-height:400px;
     overflow-y:auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
